# Engine2D

./: .gitmodules  CMakeLists.txt
Engine2D/: CMakeLists.txt
Engine2D/include/Engine2D/: Engine2D.h
Engine2D/include/Engine2D/Core/: AssetManager.h  Engine.h  FileSystem.h  Image.h  Input.h  Log.h  Timer.h  Window.h
Engine2D/include/Engine2D/Math/: Color.h
Engine2D/include/Engine2D/Renderer/: Camera.h  Mesh.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h
Engine2D/include/Engine2D/Types/: Color.h
Engine2D/source/Core/: AssetManager.cpp  Engine.cpp  FileSystem.cpp  Timer.cpp
Engine2D/source/Core/Platform/SDL3/: SDL3Input.cpp
Engine2D/source/Core/Platform/SDL3/OpenGL/: SDL3_OpenGLWindow.cpp
Engine2D/source/Renderer/: Camera.cpp  Renderer2D.cpp  Renderer2DShaders.h
Engine2D/source/Renderer/Platform/OpenGL/: OpenGLMesh.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
TestApp/: CMakeLists.txt  main.cpp
TestApp/Assets/Shaders/: Basic.frag  Basic.vert
